--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -2,24 +2,27 @@
 <html lang="en" dir="ltr">
   <head>
     <%- include('../partials/head'); %>
-    <link rel="stylesheet" href="../css/subscribe.css" />
+    <!-- <link rel="stylesheet" href="../css/subscribe.css" /> -->
+    <link rel="stylesheet" href="../css/lo.css" />
   </head>
   <body class="lo-body">
     <!-- Navigation Bar -->
     <%- include('../partials/nav'); %>
+    <section class="lo-section-main">
+      <!-- Calendly inline widget begin -->
+      <div
+        class="calendly-inline-widget"
+        data-url="https://calendly.com/boepartners/discovery?hide_gdpr_banner=1&primary_color=00c4ff"
+        style="min-width: 25rem; height: 40rem"
+      ></div>
+      <script
+        type="text/javascript"
+        src="https://assets.calendly.com/assets/external/widget.js"
+        async
+      ></script>
+      <!-- Calendly inline widget end -->
+    </section>
 
-    <!-- Calendly inline widget begin -->
-    <div
-      class="calendly-inline-widget"
-      data-url="https://calendly.com/boepartners/discovery?hide_gdpr_banner=1&primary_color=00c4ff"
-      style="min-width: 25rem; height: 40rem"
-    ></div>
-    <script
-      type="text/javascript"
-      src="https://assets.calendly.com/assets/external/widget.js"
-      async
-    ></script>
-    <!-- Calendly inline widget end -->
 
     <!-- Footer Section -->
     <%- include('../partials/footer'); %>
