--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -4,9 +4,8 @@
     <%- include('../partials/head'); %>
     <link rel="stylesheet" href="../css/lo.css" />
   </head>
-  <body class="lo-body">
+  <body class="lo-body lo-body-pop">
     <%- include('../partials/nav'); %>
-
     <h3>Kickstart a career in a skilled trade.</h3>
     <div class="lo-container">
       <% if (messages.error) { %> <%= messages.error %> <% } %>
@@ -19,12 +18,11 @@
 
         <button type="submit">Login</button>
       </form>
-      <section>
+      <aside>
         <span>Don't have an account?</span>
         <a href="/register">Sign Up</a>
-      </section>
+      </aside>
     </div>
-
     <!-- Footer Section -->
     <%- include('../partials/footer'); %>
 
