--- a/public/css/lo.css
+++ b/public/css/lo.css
@@ -226,3 +226,11 @@ button.nav-btn.fa-sign-in {
   border-radius: 5px;
   padding: 15px;
 }
+
+.lo-body .calendly-inline-widget {
+  position: relative;
+  min-width: 100vw;
+  height: 100vh;
+  margin: 20vh auto;
+  border-radius: 25px;
+}
