--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -5,24 +5,22 @@
     <!-- <link rel="stylesheet" href="../css/subscribe.css" /> -->
     <link rel="stylesheet" href="../css/lo.css" />
   </head>
-  <body class="lo-body">
+  <body class="lo-body lo-body-pop">
     <!-- Navigation Bar -->
     <%- include('../partials/nav'); %>
-    <section class="lo-section-main">
-      <!-- Calendly inline widget begin -->
-      <div
-        class="calendly-inline-widget"
-        data-url="https://calendly.com/boepartners/discovery?hide_gdpr_banner=1&primary_color=00c4ff"
-        style="min-width: 25rem; height: 40rem"
-      ></div>
-      <script
-        type="text/javascript"
-        src="https://assets.calendly.com/assets/external/widget.js"
-        async
-      ></script>
-      <!-- Calendly inline widget end -->
-    </section>
 
+    <!-- Calendly inline widget begin -->
+    <div
+      class="calendly-inline-widget"
+      data-url="https://calendly.com/boepartners/discovery?hide_gdpr_banner=1&primary_color=437e58"
+      style="border-radius: 25px"
+    ></div>
+    <script
+      type="text/javascript"
+      src="https://assets.calendly.com/assets/external/widget.js"
+      async
+    ></script>
+    <!-- Calendly inline widget end -->
 
     <!-- Footer Section -->
     <%- include('../partials/footer'); %>
