--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-dark bg-dark navbar-expand-lg">
   <div class="container-fluid">
     <a class="navitem navbar-brand" href="/">
       <div class="lo-logo-wrapper">
@@ -26,7 +26,7 @@
       id="navbarSupportedContent"
     >
       <ul class="navlist navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="navitem nav-item">
+        <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/"
             ><i class="navicon1 fa-solid fa-house"></i> <br />Home</a
           >
@@ -63,3 +63,4 @@
     </div>
   </div>
 </nav>
+<div class="lo-nav-extension"></div>
