--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -7,7 +7,7 @@
   <body class="lo-body lo-body-pop">
     <%- include('../partials/nav'); %>
     <h3>Looking to kickstart a career in a skilled trade? Join BOE.</h3>
-    <div class="lo-container">
+    <div class="lo-container lo-container-small">
       <form class="form" action="/register" method="POST">
         <div>
           <label for="name">Name</label>
