--- a/views/partials/form-subscribe.ejs
+++ b/views/partials/form-subscribe.ejs
@@ -1,60 +1,28 @@
 <form action="/usersignup" method="post">
-  <div class="container">
-    <h3 class="createaccountheader">
-      Subscribe to our BOE newsletter for weekly updates and skilled trade
-      opportunities!
-    </h3>
-    <hr />
-    <label for="fname" class="form-label">*First Name:</label>
-    <input
-      type="text"
-      class="fnameinput form-control"
-      placeholder="Enter First Name"
-      name="fname"
-      required
-    />
-    <br />
-    <label for="lname" class="form-label">*Last Name:</label>
-    <input
-      type="text"
-      class="lnameinput form-control"
-      placeholder="Enter Last Name"
-      name="name"
-      required
-    />
-    <br />
-    <label for="email" class="form-label">*Email:</label>
-    <input
-      type="text"
-      class="emailinput form-control"
-      placeholder="Enter Email"
-      name="email"
-      required
-    />
-    <br />
-    <label for="city" class="form-label">*City:</label>
-    <input
-      type="text"
-      class="cityinput form-control"
-      placeholder="Enter City"
-      name="city"
-      required
-    />
-    <br />
-    <label for="zipcode" class="form-label">*Zip Code:</label>
-    <input
-      type="text"
-      class="zipcodeinput form-control"
-      placeholder="Enter Zip Code"
-      name="zipcode"
-      required
-    />
-    <br />
-    <label for="trades" class="form-label"
-      >*List up to 3 trades that interest you:</label
+  <h3 class="createaccountheader">
+    Subscribe to our BOE newsletter for weekly updates and skilled trade
+    opportunities!
+  </h3>
+  <hr />
+  <label for="fname" class="form-label">First Name:</label>
+  <input type="text" class="fnameinput form-control" name="fname" required />
+  <label for="lname" class="form-label">Last Name:</label>
+  <input type="text" class="lnameinput form-control" name="name" required />
+  <label for="email" class="form-label">Email:</label>
+  <input type="text" class="emailinput form-control" name="email" required />
+  <label for="city" class="form-label">City:</label>
+  <input type="text" class="cityinput form-control" name="city" required />
+  <label for="zipcode" class="form-label">Zip Code:</label>
+  <input
+    type="text"
+    class="zipcodeinput form-control"
+    name="zipcode"
+    required
+  />
+  <section class="lo-trade-section">
+    <label for="trade1" class="form-label"
+      >List up to 3 trades that interest you:</label
     >
-    <br />
-    <br />
     <input
       type="text"
       class="tradeinput form-control"
@@ -62,26 +30,18 @@
       name="trade1"
       required
     />
-    <br />
     <input
       type="text"
       class="tradeinput form-control"
       placeholder="Enter Trade 2 (optional)"
       name="trade2"
     />
-    <br />
     <input
       type="text"
       class="tradeinput form-control"
       placeholder="Enter Trade 3 (optional)"
       name="trade3"
     />
-
-    <br />
-
-    <div class="clearfix">
-      <button type="button" class="cancelbtn">Cancel</button>
-      <button type="submit" class="signupbtn">Sign Up</button>
-    </div>
-  </div>
+  </section>
+  <button type="submit" class="signupbtn">Subscribe</button>
 </form>
