--- a/public/css/lo.css
+++ b/public/css/lo.css
@@ -192,7 +192,7 @@ button.nav-btn.fa-sign-in {
   height: 64px;
   border-radius: 5px;
   overflow: hidden;
-  padding: 0px 15px;
+  margin: 0px 15px;
 }
 
 .lo-body.lo-body-pop nav .lo-logo-wrapper {
@@ -227,28 +227,29 @@ button.nav-btn.fa-sign-in {
 
 .lo-body .lo-container {
   background-color: #ffffff;
-  width: 350px;
-  height: 400px;
+  height: auto;
+  width: auto;
+  max-width: 550px;
   border-radius: 10px;
   box-sizing: border-box;
   border: 1px solid rgb(0 0 0 / 15%);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  /* box-shadow: rgb(0 0 0 / 10%) 0px 4px 6px -1px,
-    rgb(0 0 0 / 6%) 0px 2px 4px -1px; */
   padding: 25px;
   margin: 25px;
-  /* position: relative; */
-  /* box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px,
-    rgba(9, 30, 66, 0.13) 0px 0px 1px 1px; */
   box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+  overflow: scroll;
+}
+
+.lo-body .lo-container-small {
+  width: 350px;
+  height: 420px;
 }
 
 .lo-body .lo-container-big {
   width: 650px;
   height: 400px;
-  /* border-radius: 20px; */
   display: flex;
   flex-direction: row;
 }
@@ -269,18 +270,19 @@ button.nav-btn.fa-sign-in {
 }
 
 .lo-body .lo-container input {
+  margin: 2px 0 15px;
   border: 1px solid rgb(0 0 0 / 15%);
 }
 
 .lo-body .lo-container input,
 .lo-body .lo-container button {
   width: 100%;
-  margin: 10px 0px;
   border-radius: 5px;
   height: 35px;
 }
 
 .lo-body .lo-container button {
+  margin: 10px 0px;
   background-color: var(--logo-color);
   border: none;
   text-transform: uppercase;
@@ -296,11 +298,15 @@ button.nav-btn.fa-sign-in {
   color: var(--text-color-min);
 }
 
+/* ------------------------------ PROFILE ------------------------------ */
+
 .lo-profile-card {
   border: 1px solid rgb(0 0 0 / 15%);
   border-radius: 5px;
   padding: 15px;
 }
+
+/* ------------------------------ CONTACT US CALENDLY ------------------------------ */
 
 .lo-body .calendly-inline-widget {
   position: relative;
@@ -308,6 +314,39 @@ button.nav-btn.fa-sign-in {
   height: 100vh;
   margin: 20vh auto;
   border-radius: 25px;
+}
+
+/* ------------------------------ SUBSCRIBE ------------------------------ */
+
+.lo-body section.lo-section-half {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  margin: 25px auto 75px;
+}
+
+.lo-body section.lo-section-half > * {
+  flex: 1;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.lo-body section.lo-section-half section:first-of-type {
+  flex: 2;
+}
+
+.lo-container .lo-trade-section {
+  margin: 15px 0;
+}
+
+.lo-container h3 {
+  font-weight: normal;
 }
 
 /* ------------------------------ FOOTER ------------------------------ */
