--- a/public/css/lo.css
+++ b/public/css/lo.css
@@ -366,8 +366,12 @@ button.nav-btn.fa-sign-in {
   text-align: center;
 }
 
-.lo-body footer .footercontainer > * {
-  margin: 0 15px;
+.lo-body footer .footercontainer i {
   color: var(--icon-inactive-color);
+  margin: 0 15px;
   font-size: 1.5em;
+}
+
+.lo-body footer .footercontainer i:hover {
+  color: var(--logo-color);
 }
