--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -27,7 +27,7 @@
     >
       <ul class="navlist navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/"
+          <a class="nav-link" aria-current="page" href="/"
             ><i class="navicon1 fa-solid fa-house"></i> <br />Home</a
           >
         </li>
