--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -6,24 +6,25 @@
   </head>
   <body class="lo-body lo-body-pop">
     <%- include('../partials/nav'); %>
+    <section class="lo-section-main">
+      <h3>Kickstart a career in a skilled trade.</h3>
+      <div class="lo-container lo-container-small">
+        <% if (messages.error) { %> <%= messages.error %> <% } %>
+        <form action="/login" method="POST">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" required />
 
-    <h3>Kickstart a career in a skilled trade.</h3>
-    <div class="lo-container lo-container-small">
-      <% if (messages.error) { %> <%= messages.error %> <% } %>
-      <form action="/login" method="POST">
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" required />
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password" required />
 
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" required />
-
-        <button type="submit">Login</button>
-      </form>
-      <aside>
-        <span>Don't have an account?</span>
-        <a href="/register">Sign Up</a>
-      </aside>
-    </div>
+          <button type="submit">Login</button>
+        </form>
+        <aside>
+          <span>Don't have an account?</span>
+          <a href="/register">Sign Up</a>
+        </aside>
+      </div>
+    </section>
     <!-- Footer Section -->
     <%- include('../partials/footer'); %>
 
