--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -6,28 +6,30 @@
   </head>
   <body class="lo-body lo-body-pop">
     <%- include('../partials/nav'); %>
-    <h3>Looking to kickstart a career in a skilled trade? Join BOE.</h3>
-    <div class="lo-container lo-container-small">
-      <form class="form" action="/register" method="POST">
-        <div>
-          <label for="name">Name</label>
-          <input type="text" id="name" name="name" required />
-        </div>
-        <div>
-          <label for="email">Email</label>
-          <input type="email" id="email" name="email" required />
-        </div>
-        <div>
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" required />
-        </div>
-        <button type="submit">Sign Up</button>
-      </form>
-      <aside>
-        <span>Already have an account?</span>
-        <a href="/login">Log In</a>
-      </aside>
-    </div>
+    <section class="lo-section-main">
+      <h3>Looking to kickstart a career in a skilled trade? Join BOE.</h3>
+      <div class="lo-container lo-container-small">
+        <form class="form" action="/register" method="POST">
+          <div>
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" required />
+          </div>
+          <div>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required />
+          </div>
+          <div>
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" required />
+          </div>
+          <button type="submit">Sign Up</button>
+        </form>
+        <aside>
+          <span>Already have an account?</span>
+          <a href="/login">Log In</a>
+        </aside>
+      </div>
+    </section>
     <!-- Footer Section -->
     <%- include('../partials/footer'); %>
 
