--- a/views/partials/gallery-trade-ex.ejs
+++ b/views/partials/gallery-trade-ex.ejs
@@ -1,3 +1,41 @@
+<div class="lo-image-gallery">
+  <h1>Trade Examples</h1>
+
+  <figure>
+    <img
+      src="../images/subscribe/electrical.jpeg"
+      class="img-thumbnail grayscale"
+    />
+    <figcaption>Electrical</figcaption>
+  </figure>
+
+  <figure>
+    <img
+      src="../images/subscribe/welding.jpeg"
+      class="welderpic img-thumbnail grayscale"
+    />
+    <figcaption>Welding</figcaption>
+  </figure>
+
+  <figure>
+    <img
+      src="../images/subscribe/cosmetology.jpeg"
+      class="img-thumbnail grayscale"
+    />
+    <figcaption>Cosmetology</figcaption>
+  </figure>
+
+  <figure>
+    <img
+      src="../images/subscribe/construction.jpeg"
+      class="constructionpic img-thumbnail grayscale"
+    />
+    <figcaption>Construction</figcaption>
+  </figure>
+</div>
+
+<!-- -------------------------------- -->
+<!-- 
 <div class="imagegallerycontainer1 container-fluid">
   <div class="jumbotron">
     <h1 class="text-center">Trade Examples</h1>
@@ -45,4 +83,4 @@
       </figure>
     </div>
   </div>
-</div>
+</div> -->
