--- a/views/partials/carousel.ejs
+++ b/views/partials/carousel.ejs
@@ -1,4 +1,4 @@
-<div class="lo-carousel-wrapper">
+<div class="lo-carousel-wrapper lo-container">
   <h3 class="carouselheader">Case Studies</h3>
   <div class="carousel">
     <button class="carousel__button carousel__button--left is-hidden">
