--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,15 +3,15 @@
   <head>
     <%- include('../partials/head'); %>
     <!-- Regular CSS -->
-    <link rel="stylesheet" href="../css/styles.css" />
+    <!-- <link rel="stylesheet" href="../css/styles.css" /> -->
+    <link rel="stylesheet" href="../css/lo.css" />
   </head>
   <body class="lo-body">
     <!-- Navigation Bar -->
     <%- include('../partials/nav'); %>
 
     <!-- Top Section -->
-    <div class="row">
-      <!-- Search Bar -->
+    <!-- <div class="row">
       <div class="col-lg-3 col-md-3 col-sm-12 searchbar">
         <h3 class="Searchbarheader">Browse</h3>
         <div class="row">
@@ -26,20 +26,19 @@
           </div>
         </div>
       </div>
-      <!-- Banner -->
       <div class="banner">
         <h1>Looking to kickstart a career in a skilled trade? Search below!</h1>
       </div>
-    </div>
+    </div> -->
 
     <!-- Main Section -->
-    <div class="row">
+    <section class="lo-section-half">
       <!-- Basic Gallery -->
       <%- include('../partials/listings-basic'); %>
 
       <!-- In Depth Gallery  -->
       <%- include('../partials/listings-depth'); %>
-    </div>
+    </section>
 
     <!-- Footer Section -->
     <%- include('../partials/footer'); %>
