--- a/views/pages/resources.ejs
+++ b/views/pages/resources.ejs
@@ -3,6 +3,7 @@
   <head>
     <%- include('../partials/head'); %>
     <link rel="stylesheet" href="/css/resources.css" />
+    <link rel="stylesheet" href="/css/lo.css" />
   </head>
   <body class="lo-body">
     <!-- Navigation Bar -->
