--- a/views/partials/listings-basic.ejs
+++ b/views/partials/listings-basic.ejs
@@ -1,15 +1,16 @@
-<div class="basiclist list-group">
+<section class="basiclist list-group lo-container">
   <ul class="galleryUL" id="gallery1">
     <% let sortedSchools = [...schools] %> <% sortedSchools.sort((a, b) => { %>
     <% if (a.name < b.name) { %> <% return -1; %> <% } %> <% }); %> <%
     sortedSchools.forEach(function(school, i) { %>
     <li class="listentry">
-      <a
-        class="basiclistitema list-group-item list-group-item-action"
-        href="#Item<%= i %>"
-      >
-        <img class="companylogo" src="<%= school.logoUrl %>" alt="Logo" />
-        <div class="basiclistitemtextcontainer">
+      <a class="list-group-item list-group-item-action" href="#Item<%= i %>">
+        <section class="lo-list-img-side">
+          <div class="lo-logo-wrapper">
+            <img class="companylogo" src="<%= school.logoUrl %>" alt="Logo" />
+          </div>
+        </section>
+        <section class="basiclistitemtextcontainer lo-list-text-side">
           <strong class="basiclistitemOrganization"><%= school.name %></strong>
           <br />
           <em class="basiclistitemCategory"><%= school.type %></em>
@@ -21,9 +22,9 @@
               <%= school.location.city %>, <%= school.location.state %></em
             ></em
           >
-        </div>
+        </section>
       </a>
     </li>
     <% }); %>
   </ul>
-</div>
+</section>
