--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,29 +10,12 @@
     <!-- Navigation Bar -->
     <%- include('../partials/nav'); %>
 
-    <!-- Top Section -->
-    <!-- <div class="row">
-      <div class="col-lg-3 col-md-3 col-sm-12 searchbar">
-        <h3 class="Searchbarheader">Browse</h3>
-        <div class="row">
-          <div class="col-lg-4 col-md-4 col-sm-12">
-            <input
-              class="searchinput"
-              type="text"
-              id="searchInput"
-              onkeyup="searchBar()"
-              placeholder="Search..."
-            />
-          </div>
-        </div>
-      </div>
-      <div class="banner">
-        <h1>Looking to kickstart a career in a skilled trade? Search below!</h1>
-      </div>
-    </div> -->
+    <div class="banner">
+      <!-- <h3>Looking to kickstart a career in a skilled trade? Search below!</h3> -->
+    </div>
 
     <!-- Main Section -->
-    <section class="lo-section-half">
+    <section class="lo-section-half lo-container">
       <!-- Basic Gallery -->
       <%- include('../partials/listings-basic'); %>
 
