--- a/views/partials/listings-depth.ejs
+++ b/views/partials/listings-depth.ejs
@@ -1,4 +1,4 @@
-<section class="indepthlist list-group lo-container lo-container-big">
+<section class="indepthlist list-group lo-in-depth-list">
   <ul class="galleryUL" id="gallery2">
     <% schools.forEach(function(school, i) { %>
     <li
