favorites heart layout

--- a/views/partials/listings-basic.ejs
+++ b/views/partials/listings-basic.ejs
@@ -34,6 +34,9 @@
           >
         </section>
       </a>
+      <aside class="lo-save-listing">
+        <i class="fa-solid fa-heart"></i>
+      </aside>
     </li>
     <% }); %>
   </ul>
