--- a/public/css/lo.css
+++ b/public/css/lo.css
@@ -447,6 +447,7 @@ button.nav-btn.fa-sign-in {
 .lo-basic-list li,
 .lo-in-depth-list li {
   list-style: none;
+  position: relative;
 }
 
 .lo-basic-list ul,
@@ -500,12 +501,27 @@ section.lo-section-half .lo-in-depth-list li a:hover,
   background-color: rgba(67, 126, 88, 0.1);
 }
 
-section.lo-section-half .lo-basic-list li .lo-list-img-side {
-}
-
 section.lo-section-half .lo-basic-list li .lo-list-text-side {
   padding: 0 10px 10px 10px;
   border-bottom: 1px solid rgb(0 0 0 / 15%);
+}
+
+/* ------------------------------ INDEX FAVORITES ------------------------------ */
+
+.lo-save-listing {
+  position: absolute;
+  z-index: 5;
+  top: 0;
+  right: 0;
+}
+
+.lo-body .lo-container .lo-basic-list aside {
+  cursor: pointer;
+  margin: 10px;
+}
+
+.lo-body .lo-container .lo-basic-list aside i:hover {
+  color: var(--color-a);
 }
 
 /* ------------------------------ INDEX SEARCHBAR ------------------------------ */
@@ -514,25 +530,27 @@ section.lo-search-wrapper {
   position: relative;
   z-index: 2;
   width: 100%;
-  padding: 10px;
+  padding: 25px 10px;
   border-bottom: 1px solid rgb(0 0 0 / 15%);
   box-shadow: rgb(0 0 0 / 18%) 0px 2px 4px;
 }
 
 .lo-search-wrapper i.fa-solid.fa-magnifying-glass {
   position: absolute;
-  top: 30%;
+  top: 36%;
   left: 5%;
-  color: rgb(0 0 0 / 25%);
+  color: rgb(0 0 0 / 35%);
 }
 
 input#searchInput::placeholder {
-  color: rgb(0 0 0 / 25%);
+  color: rgb(0 0 0 / 35%);
 }
 
 input#searchInput[type="text"] {
   padding-left: 25px;
   color: var(--text-color-min);
+  background-color: #f8f9fa;
+  border-color: rgb(0 0 0 / 5%);
 }
 
 /* ------------------------------ FOOTER ------------------------------ */
